the plan part 3